--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -1,20 +1,17 @@
 .constructor {
-    margin: 50px 200px 50px;
-    display: grid;
-    grid-template-areas: "l r";
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    margin: 10%
+
 
 
 }
-.changeName input {
-    margin: 15px;
+.constructor input {
+    margin: 1%;
 }
 
 .newElementInputs {
     display: grid;
     grid-template-areas: "l r";
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 1fr;
     grid-gap: 10px;
 
 }
@@ -26,4 +23,92 @@
 }
 .addButton {
     margin: 5px;
+    border-radius: 15px;
+}
+.validate {
+    color: red;
+    font-weight: bold;
+}
+.Inputs {
+    margin: 10px;
+}
+.wrapper {
+    display: grid;
+    grid-template-areas: "l r";
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 10px;
+}
+.changeButtons{
+    font-size: 70%;
+}
+.floatingButtonRed {
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 45px;
+    margin: 5px 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .3s;
+}
+.floatingButtonRed:hover {
+    background: red;
+    box-shadow: 0 5px 5px red;
+    color: white;
+    transform: translateY(-3px);
+}
+.floatingButtonGreen {
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 45px;
+    margin: 5px 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .3s;
+}
+.floatingButtonGreen:hover {
+    background: greenyellow;
+    box-shadow: 0 5px 5px greenyellow;
+    color: white;
+    transform: translateY(-3px);
+}
+.desc {
+cursor: pointer;
+    color: black;
+    text-decoration: none;
+}
+.desc:hover {
+
+    text-shadow: 0 5px 5px grey;
+    text-decoration: none;
+}
+.deleteButton {
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+
+}
+.deleteButton:hover {
+
+    text-shadow: 0 5px 5px grey;
+    text-decoration: none;
+}
+.deleteButtonDiv {
+    padding-top: 25px;
+}
+.list {
+    margin-bottom: 5%;
 }
